--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/rocket.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dallin Sly - Software Engineer Portfolio" />
+    <meta
+      name="description"
+      content="Dallin Sly - Software Engineer Portfolio"
+    />
     <title>Dallin Sly</title>
   </head>
   <body>
